# jax-gpt

./: LICENSE  README.md  benchmark.py  bpe.py  configurator.py  encoder.py  flax_gpt2.py  gpt2.py  model.py  parameter_converter.py  pyproject.toml  requirements.txt  sample.py  sharding.py  test_gpt2.py  test_parameter_conversion.py  train.py  trainer.py  training_config.json  utils.py
.github/workflows/: ci.yml
config/: eval_gpt2.py  eval_gpt2_large.py  eval_gpt2_medium.py  eval_gpt2_xl.py  finetune_shakespeare.py  train_gpt2.py  train_shakespeare_char.py
data/openwebtext/: prepare.py
data/shakespeare/: prepare.py
data/shakespeare_char/: prepare.py
jax_gpt/: __init__.py  benchmark.py  checkpoints.py  config.py  data.py  gpt2.py  model.py  parameter_converter.py  sample.py  sharding.py  train.py  utils.py
jax_gpt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_benchmark.py  test_configurator.py  test_gpt2.py  test_kv_cache.py  test_model.py  test_parameter_conversion.py  test_sample.py  test_sharding.py  test_train.py  test_train_pipeline.py  test_trainer.py  test_utils.py
