[project]
name = "jax-gpt"
version = "0.1.0"
description = "JAX/Flax implementation of GPT-2, inspired by nanoGPT"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "jax>=0.4.30",
    "jaxlib>=0.4.30",
    "flax>=0.8.0",
    "optax>=0.2.0",
    "orbax-checkpoint>=0.6.0",
    "tiktoken>=0.7.0",
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
train = [
    "wandb>=0.17.0",
    "datasets>=2.20.0",
]
pretrained = [
    "transformers>=4.40.0",
    "requests>=2.31.0",
]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "psutil>=5.9.0",
]

[tool.setuptools]
py-modules = ["model", "gpt2", "parameter_converter", "train", "trainer", "benchmark", "sample", "utils", "configurator", "sharding"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: tests that require network access",
    "gpu: tests that require a GPU",
    "slow: slow tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
